--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,13 @@ dependencies:
   flutter:
      sdk: flutter
   table_calendar: ^3.0.9
+  intl: ^0.18.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  pdf: ^3.11.3
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
